# EnsemTrust

./: .example.env  .example.spark-defaults.conf  .gitignore  .template.env  Dockerfile.dagster  Dockerfile.spark  Dockerfile.streamlit  EDA_ensemtrust.ipynb  GPU_SETUP.md  Makefile  README.md  dagster.yaml  docker-compose.yml  git_upload.ps1  git_upload.sh  jardownloader.ps1  jardownloader.sh  model_training.ipynb  pyproject.toml  report.html  streamlit-requirements.txt  trino_regster_table_script.sql  workspace.yaml
config/trino/: config.properties
config/trino/catalog/: delta.properties  hive.properties  iceberg.properties
init-scripts/postgres/: 01-init-hive-db.sh  02-init-metabase-db.sh
notebooks/: model_training.ipynb
pipeline/: __init__.py
pipeline/assets/: bronze_layer.py  gold_layer.py  silver_layer.py
pipeline/assets/bronze/: bronze_layer.py
pipeline/assets/gold/: gold_layer.py
pipeline/assets/machine_learning/: feature_engineering.py  inference.py  load_data.py  train_model.py
pipeline/assets/silver/: get_dataset.py  transform.py
pipeline/jobs/: ingestion_job.py
pipeline/resources/: kafka.py  minio.py
pipeline/sensors/: README.md  file_sensor.py
pipeline/utils/: feature_engineer.py  models.py  spark.py  spark_submit.py
research/: EDA.ipynb  metabase_queries.sql
streamlit/: app.py
