[project]
name = "ensemtrust"
version = "0.1.0"
description = "End-to-end project for fake news detection"
authors = [
    { name = "mnhtndev", email = "tuannguyen.02042005@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-graphql",
    "dagster-postgres",
    "dagster-docker",
    "dagster-dbt",
    "boto3",
    "s3fs",
    "pyarrow",
    "dbt-trino",
    "jsonlines",
    "deltalake",
    "httpx>=0.27.0",
    "minio"
]

[build-system]
requires = ["poetry-core>=1.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
